kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - port: 8080
    targetPort: 8080
